src/main/java/com/sun/el/parser/ELParser.java
/*
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 *
 * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
 *
 * The contents of this file are subject to the terms of either the GNU
 * General Public License Version 2 only ("GPL") or the Common Development
 * and Distribution License("CDDL") (collectively, the "License").  You
 * may not use this file except in compliance with the License.  You can
 * obtain a copy of the License at
 * https://oss.oracle.com/licenses/CDDL+GPL-1.1
 * or LICENSE.txt.  See the License for the specific
 * language governing permissions and limitations under the License.
 *
 * When distributing the software, include this License Header Notice in each
 * file and include the License file at LICENSE.txt.
 *
 * GPL Classpath Exception:
 * Oracle designates this particular file as subject to the "Classpath"
 * exception as provided by Oracle in the GPL Version 2 section of the License
 * file that accompanied this code.
 *
 * Modifications:
 * If applicable, add the following below the License Header, with the fields
 * enclosed by brackets [] replaced by your own identifying information:
 * "Portions Copyright [year] [name of copyright owner]"
 *
 * Contributor(s):
 * If you wish your version of this file to be governed by only the CDDL or
 * only the GPL Version 2, indicate your decision by adding "[Contributor]
 * elects to include this software in this distribution under the [CDDL or GPL
 * Version 2] license."  If you don't indicate a single choice of license, a
 * recipient has the option to distribute your version of this file under
 * either the CDDL, the GPL Version 2 or to extend the choice of license to
 * its licensees as provided above.  However, if you add GPL Version 2 code
 * and therefore, elected the GPL Version 2 license, then the option applies
 * only if the new code is made subject to such option by the copyright
 * holder.
 */

/* Generated By:JJTree&JavaCC: Do not edit this line. ELParser.java */
package com.sun.el.parser;

import java.io.InputStream;
import java.io.Reader;
import java.io.StringReader;
import java.io.UnsupportedEncodingException;
import java.util.ArrayList;
import java.util.List;

import javax.el.ELException;

import com.sun.el.util.MessageFactory;

/**
 * @author TODAY <br>
 *         2019-02-18 20:06
 */
public class ELParser implements ELParserTreeConstants, ELParserConstants {

    protected final JJTELParserState jjtree = new JJTELParserState();

    public final static AstCompositeExpression parse(String ref) throws ELException {
        try {

            return new ELParser(new StringReader(ref)).CompositeExpression();
        }
        catch (ParseException pe) {
            throw new ELException(MessageFactory.get("error.parseFail", ref), pe);
        }
    }

    /** Generated Token Manager. */
    private final ELParserTokenManager token_source;
    /** Current token. */
    public Token token;
    /** Next token. */
    public Token jj_nt;
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    private int jj_gen;
    final private int[] jj_la1 = new int[53];

    private static final int[] JJ_LA1_0 = new int[] { //
        0xe, 0xe, 0x4000000, 0x0, 0x575a00, 0x575a00, 0x2000000, 0x0, //
        0x100000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xf8000000, //
        0x60000000, 0x18000000, 0x0, 0x80000000, 0xf8000000, 0x0, 0x0, 0x0, //
        0x0, 0x0, 0x0, 0x0, 0x0, 0x575a00, 0x480000, 0x575a00, 0x480000, //
        0x100000, 0x100000, 0x2000000, 0x575a00, 0x575a00, 0x100000, 0x100000, //
        0x400200, 0x2000000, 0x575a00, 0x1000000, 0x2000000, 0x575a00, 0x1000000, //
        0x100000, 0x75800, 0x30000
    };

    private static final int[] JJ_LA1_1 = new int[] { //
        0x0, 0x0, 0x0, 0x1000000, 0x4022180, 0x4022180, 0x0, 0x4000000, //
        0x4000000, 0x40000, 0x1800, 0x1800, 0x600, 0x600, 0x78, 0x18, //
        0x60, 0x78, 0x7, 0x0, 0x0, 0x6, 0x1, 0x7, 0x800000, 0x30000, //
        0x30000, 0x788000, 0x180000, 0x600000, 0x788000, 0x180, 0x4022180, //
        0x0, 0x4000000, 0x0, 0x0, 0x0, 0x0, 0x4022180, 0x4022180, 0x0, 0x0, //
        0x4000000, 0x0, 0x4022180, 0x0, 0x0, 0x4022180, 0x0, 0x0, 0x0, 0x0,//
    };

    private final JJCalls[] jj_2_rtns = new JJCalls[5];

    private boolean jj_rescan = false;
    private int jj_gc = 0;

    /**
     * Constructor with InputStream.
     * 
     * @throws UnsupportedEncodingException
     */
    public ELParser(InputStream stream) throws UnsupportedEncodingException {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     * 
     * @throws UnsupportedEncodingException
     */
    public ELParser(InputStream stream, String encoding) throws UnsupportedEncodingException {
        this(new ELParserTokenManager(new SimpleCharStream(stream, encoding, 1, 1)));
    }

    public ELParser(Reader stream) {
        this(new ELParserTokenManager(new SimpleCharStream(stream, 1, 1)));
    }

    public ELParser(ELParserTokenManager parserTokenManager) {
        this.token_source = parserTokenManager;

        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 53; i++)
            jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++)
            jj_2_rtns[i] = new JJCalls();
    }

    /*
     * CompositeExpression Allow most flexible parsing, restrict by examining type
     * of returned node
     */
    final public AstCompositeExpression CompositeExpression() throws ParseException {
        /* @bgen(jjtree) CompositeExpression */
        AstCompositeExpression jjtn000 = new AstCompositeExpression(JJTCOMPOSITEEXPRESSION);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try {

            label_1: while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case LITERAL_EXPRESSION :
                    case START_DYNAMIC_EXPRESSION :
                    case START_DEFERRED_EXPRESSION :;
                        break;
                    default:
                        jj_la1[0] = jj_gen;
                        break label_1;
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case START_DEFERRED_EXPRESSION :
                        DeferredExpression();
                        break;
                    case START_DYNAMIC_EXPRESSION :
                        DynamicExpression();
                        break;
                    case LITERAL_EXPRESSION :
                        LiteralExpression();
                        break;
                    default:
                        jj_la1[1] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
            jj_consume_token(0);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            return jjtn000;
        }
        catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else {
                jjtree.popNode();
            }
            throw jjte000;
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /*
     * LiteralExpression Non-EL Expression blocks
     */
    final public void LiteralExpression() throws ParseException {
        /* @bgen(jjtree) LiteralExpression */
        AstLiteralExpression jjtn000 = new AstLiteralExpression(JJTLITERALEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t = null;
        try {
            t = jj_consume_token(LITERAL_EXPRESSION);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setImage(t.image);
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /*
     * DeferredExpression #{..} Expressions
     */
    final public void DeferredExpression() throws ParseException {
        /* @bgen(jjtree) DeferredExpression */
        AstDeferredExpression jjtn000 = new AstDeferredExpression(JJTDEFERREDEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            jj_consume_token(START_DEFERRED_EXPRESSION);
            Expression();
            jj_consume_token(RCURL);
        }
        catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else {
                jjtree.popNode();
            }
            throw jjte000;
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /*
     * DynamicExpression ${..} Expressions
     */
    final public void DynamicExpression() throws ParseException {
        /* @bgen(jjtree) DynamicExpression */
        AstDynamicExpression jjtn000 = new AstDynamicExpression(JJTDYNAMICEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            jj_consume_token(START_DYNAMIC_EXPRESSION);
            Expression();
            jj_consume_token(RCURL);
        }
        catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else {
                jjtree.popNode();
            }
            throw jjte000;
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /*
     * Expression EL Expression Language Root
     */
    final public void Expression() throws ParseException {
        SemiColon();
    }

    /*
     * SemiColon
     */
    final public void SemiColon() throws ParseException {
        Assignment();
        label_2: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case SEMICOLON :;
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
            jj_consume_token(SEMICOLON);
            AstSemiColon jjtn001 = new AstSemiColon(JJTSEMICOLON);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            try {
                Assignment();
            }
            catch (Throwable jjte001) {
                if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                }
                else {
                    jjtree.popNode();
                }
                throw jjte001;
            }
            finally {
                if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, 2);
                }
            }
        }
    }

    /*
     * Assignment For '=', right associatve, then LambdaExpression or Choice or
     * Assignment
     */
    final public void Assignment() throws ParseException {
        if (jj_2_1(4)) {
            LambdaExpression();
        }
        else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case START_MAP :
                case INTEGER_LITERAL :
                case FLOATING_POINT_LITERAL :
                case STRING_LITERAL :
                case TRUE :
                case FALSE :
                case NULL :
                case LPAREN :
                case LBRACK :
                case NOT0 :
                case NOT1 :
                case EMPTY :
                case MINUS :
                case IDENTIFIER :
                    Choice();
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case ASSIGN :
                            jj_consume_token(ASSIGN);
                            AstAssign jjtn001 = new AstAssign(JJTASSIGN);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
                            try {
                                Assignment();
                            }
                            catch (Throwable jjte001) {
                                if (jjtc001) {
                                    jjtree.clearNodeScope(jjtn001);
                                    jjtc001 = false;
                                }
                                else {
                                    jjtree.popNode();
                                }
                                throw jjte001;
                            }
                            finally {
                                if (jjtc001) {
                                    jjtree.closeNodeScope(jjtn001, 2);
                                }
                            }
                            break;
                        default:
                            jj_la1[3] = jj_gen;;
                    }
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    /*
     * LambdaExpression
     */
    final public void LambdaExpression() throws ParseException {
        /* @bgen(jjtree) LambdaExpression */
        AstLambdaExpression jjtn000 = new AstLambdaExpression(JJTLAMBDAEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            LambdaParameters();
            jj_consume_token(ARROW);
            if (jj_2_2(4)) {
                LambdaExpression();
            }
            else {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case START_MAP :
                    case INTEGER_LITERAL :
                    case FLOATING_POINT_LITERAL :
                    case STRING_LITERAL :
                    case TRUE :
                    case FALSE :
                    case NULL :
                    case LPAREN :
                    case LBRACK :
                    case NOT0 :
                    case NOT1 :
                    case EMPTY :
                    case MINUS :
                    case IDENTIFIER :
                        Choice();
                        break;
                    default:
                        jj_la1[5] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
        }
        catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else {
                jjtree.popNode();
            }
            throw jjte000;
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    final public void LambdaParameters() throws ParseException {
        /* @bgen(jjtree) LambdaParameters */
        AstLambdaParameters jjtn000 = new AstLambdaParameters(JJTLAMBDAPARAMETERS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER :
                    Identifier();
                    break;
                case LPAREN :
                    jj_consume_token(LPAREN);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case IDENTIFIER :
                            Identifier();
                            label_3: while (true) {
                                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                    case COMMA :;
                                        break;
                                    default:
                                        jj_la1[6] = jj_gen;
                                        break label_3;
                                }
                                jj_consume_token(COMMA);
                                Identifier();
                            }
                            break;
                        default:
                            jj_la1[7] = jj_gen;;
                    }
                    jj_consume_token(RPAREN);
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else {
                jjtree.popNode();
            }
            throw jjte000;
        }
        finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /*
     * Choice For Choice markup a ? b : c, right associative
     */
    final public void Choice() throws ParseException {
        Or();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case QUESTIONMARK :
                jj_consume_token(QUESTIONMARK);
                Choice();
                jj_consume_token(COLON);
                AstChoice jjtn001 = new AstChoice(JJTCHOICE);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
                try {
                    Choice();
                }
                catch (Throwable jjte001) {
                    if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                    }
                    else {
                        jjtree.popNode();
                    }
                    throw jjte001;
                }
                finally {
                    if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001, 3);
                    }
                }
                break;
            default:
                jj_la1[9] = jj_gen;;
        }
    }

    /*
     * Or For 'or' '||', then And
     */
    final public void Or() throws ParseException {
        And();
        label_4: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR0 :
                case OR1 :;
                    break;
                default:
                    jj_la1[10] = jj_gen;
                    break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR0 :
                    jj_consume_token(OR0);
                    break;
                case OR1 :
                    jj_consume_token(OR1);
                    break;
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            AstOr jjtn001 = new AstOr(JJTOR);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            try {
                And();
            }
            catch (Throwable jjte001) {
                if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                }
                else {
                    jjtree.popNode();
                }
                throw jjte001;
            }
            finally {
                if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, 2);
                }
            }
        }
    }

    /*
     * And For 'and' '&&', then Equality
     */
    final public void And() throws ParseException {
        Equality();
        label_5: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case AND0 :
                case AND1 :;
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    break label_5;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case AND0 :
                    jj_consume_token(AND0);
                    break;
                case AND1 :
                    jj_consume_token(AND1);
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            AstAnd jjtn001 = new AstAnd(JJTAND);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            try {
                Equality();
            }
            catch (Throwable jjte001) {
                if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                }
                else {
                    jjtree.popNode();
                }
                throw jjte001;
            }
            finally {
                if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, 2);
                }
            }
        }
    }
